--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 name: V360
 url: https://thev360.github.io
 description: V360's projects and blog! what else should i put in this field ?
+excerpt_separator: <!--more-->
