testing this out

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ url: https://thev360.github.io
 description: V360's projects and blog! what else should i put in this field ?
 
 excerpt_separator: <!--more-->
+permalink: /:year/:month/:day/:title/
