--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ url: https://thev360.github.io
 description: V360's projects and blog! what else should i put in this field ?
 
 excerpt_separator: <!--more-->
-paginate: 8
-paginate_path: "/blog/p:num/"
+paginate: 4
+paginate_path: "/blog/:num/"
 permalink: /blog/:year/:month/:day/:title/
