--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,13 @@ name: V360
 url: https://thev360.github.io
 description: V360's projects and blog! what else should i put in this field ?
 
+defaults:
+  scope:
+    path: "blog/"
+  values:
+    layout: "post"
+
 excerpt_separator: <!--more-->
-paginate: 4
+paginate: 8
 paginate_path: "/blog/:num/"
 permalink: /blog/:year/:month/:day/:title/
