--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,6 @@ excerpt_separator: <!--more-->
 paginate: 8
 paginate_path: "/blog/:num/"
 permalink: /blog/:year/:month/:day/:title/
+
+plugins:
+  - jekyll-feed
